# type_in_pl

./: pyproject.toml
tests/: test_type_in_pl.py
type_in_pl/: app.py
